--- a/.luarc.json
+++ b/.luarc.json
@@ -1,8 +1,4 @@
 {
-    "workspace.library": [
-        "c:\\Users\\kieua\\.vscode\\extensions\\droidxrx.gameguardian-lua-0.0.5\\EmmyLua"
-    ],
-    "diagnostics.disable": [
-        "inject-field"
-    ]
+    "workspace.library": [],
+    "diagnostics.disable": []
 }
